Generate more demo results

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -218,7 +218,7 @@
     "fig.set_size_inches(figsize, figsize)\n",
     "plot_positions(ax, positions_cm, WALLS_DICT[exp_name])\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_positions.pdf\"\n",
-    "save_fig(fig, plot_name)"
+    "#save_fig(fig, plot_name)"
    ]
   },
   {
@@ -458,18 +458,18 @@
     "                      n_calib=n_calib)\n",
     "fig.set_size_inches(*fig_size)\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix.pdf\"\n",
-    "save_fig(fig, plot_name)\n",
+    "#save_fig(fig, plot_name)\n",
     "\n",
     "fig, ax = plot_matrix(distances_cm, results_matrix_moving, distances, xvalues=times,no_deco=no_deco,\n",
     "                      n_calib=n_calib)\n",
     "fig.set_size_inches(*fig_size)\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_hist.pdf\"\n",
-    "save_fig(fig, plot_name)\n",
+    "#save_fig(fig, plot_name)\n",
     "fig, ax = plot_matrix(distances_cm, results_matrix_part, distances, xvalues=times, no_deco=no_deco,\n",
     "                      n_calib=n_calib)\n",
     "fig.set_size_inches(*fig_size)\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_part.pdf\"\n",
-    "save_fig(fig, plot_name)\n",
+    "#save_fig(fig, plot_name)\n",
     "\n",
     "gt_angles = np.full(len(distances), 90)\n",
     "fig, ax = plot_matrix(angles_deg, results_matrix_angles, gt_angles, xvalues=times,\n",
@@ -477,19 +477,19 @@
     "                      n_calib=n_calib)\n",
     "fig.set_size_inches(*fig_size)\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_angle.pdf\"\n",
-    "save_fig(fig, plot_name)\n",
+    "#save_fig(fig, plot_name)\n",
     "fig, ax = plot_matrix(np.array(angles_deg), results_matrix_angles_moving,  gt_angles, xvalues=times,\n",
     "                      no_deco=no_deco, log=False, angles=True,\n",
     "                      n_calib=n_calib)\n",
     "fig.set_size_inches(*fig_size)\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_hist_angle.pdf\"\n",
-    "save_fig(fig, plot_name)\n",
+    "#save_fig(fig, plot_name)\n",
     "fig, ax = plot_matrix(np.array(angles_deg), results_matrix_angles_part,  gt_angles, xvalues=times,\n",
     "                      no_deco=no_deco, log=False, angles=True,\n",
     "                      n_calib=n_calib)\n",
     "fig.set_size_inches(*fig_size)\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_matrix_part_angle.pdf\"\n",
-    "save_fig(fig, plot_name)"
+    "#save_fig(fig, plot_name)"
    ]
   },
   {
@@ -618,6 +618,7 @@
    "source": [
     "from plot_helpers import ls, labels, add_double_legend\n",
     "from generate_filtering_results import angle_error\n",
+    "np.random.seed(2)\n",
     "\n",
     "print(ls)\n",
     "chosen_calibration_param = 0.3\n",
@@ -888,25 +889,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_name = \"2022_01_25\"\n",
-    "results_df = pd.read_pickle(f\"../datasets/{exp_name}/all_data.pkl\")\n",
-    "print(\"available appendices:\", results_df.appendix.values)\n",
-    "\n",
-    "appendix = \"test24\"  # works ok\n",
-    "#appendix = \"test25\"  # doesn't work"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "exp_name = \"2022_01_27_demo\"\n",
     "results_df = pd.read_pickle(f\"../datasets/{exp_name}/all_data.pkl\")\n",
     "print(\"available appendices:\", results_df.appendix.values)\n",
     "\n",
-    "appendix = \"test4\"  # works well\n",
+    "#appendix = \"test4\"  # works well\n",
     "#appendix = \"test3\" # works ok\n",
     "#appendix = \"test2\"  # doesn't detect\n",
     "#appendix = \"test1\" # crashes\n",
@@ -1040,14 +1027,31 @@
     "    #plot_tail(axs[3], results_matrix_moving)\n",
     "    if not WallDetection.SIMPLIFY_ANGLES:\n",
     "        plot_angles(axs[3], results_matrix_angles)\n",
-    "    return fig, axs"
+    "    return fig, axs\n",
+    "\n",
+    "def plot_groundtruth(ax, positions_cm, walls, n_poses=20):\n",
+    "    from audio_gtsam.wall_backend import plot_wall, add_decorations\n",
+    "    cmap = plt.get_cmap('inferno', n_timesteps) \n",
+    "    n_labels = 3\n",
+    "    \n",
+    "    for i, p in enumerate(positions_cm):\n",
+    "        ax.scatter(*p[:2]*1e-2, color=cmap(i))\n",
+    "        \n",
+    "    for i, (wall_distance, wall_angle) in enumerate(walls):\n",
+    "        normal = np.r_[\n",
+    "            np.cos(wall_angle / 180 * np.pi), \n",
+    "            np.sin(wall_angle / 180 * np.pi)\n",
+    "        ]\n",
+    "        arrow, line = plot_wall(wall_distance*1e-2, normal, ax, plane_index=i, label=f\"real $\\\\pi^{i}$\", ls=\":\", lw=3.0)\n",
+    "    add_decorations(fig, ax, n_poses=n_poses)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -1080,6 +1084,7 @@
     "results_matrix_moving = np.full((len(wall_detection.estimator.distances_cm), n_timesteps), np.nan)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
+    "plot_groundtruth(ax, positions_cm, walls=WALLS_DICT[exp_name], n_poses=0)\n",
     "\n",
     "for i in range(n_timesteps):\n",
     "    if i % 20 == 0:\n",
@@ -1135,10 +1140,10 @@
     "    fg_angle_estimates.append(angle_deg)\n",
     "    fg_colors.append(f\"C{wall_backend.plane_index+1}\")\n",
     "    \n",
-    "    \n",
-    "    wall_backend.plot(fig, ax, n_poses=n_timesteps)\n",
-    "add_decorations(fig, ax, n_poses=n_timesteps)\n",
-    "\n",
+    "    wall_backend.plot(fig, ax, n_poses=n_timesteps, live_update=False)\n",
+    "wall_backend.plot(fig, ax, n_poses=n_timesteps, live_update=False, final=True)\n",
+    "#add_decorations(fig, ax, n_poses=n_timesteps)\n",
+    "add_decorations(fig, ax, n_poses=0)\n",
     "save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_result.pdf\")\n",
     "#plt.plot(times[:n_timesteps], angles_forward)\n",
     "print(\"done\")"
@@ -1150,25 +1155,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_groundtruth(ax, positions_cm, walls, n_poses=20):\n",
-    "    from audio_gtsam.wall_backend import plot_wall, add_decorations\n",
-    "    cmap = plt.get_cmap('inferno', n_timesteps) \n",
-    "    n_labels = 3\n",
-    "    \n",
-    "    for i, p in enumerate(positions_cm):\n",
-    "        ax.scatter(*p[:2]*1e-2, color=cmap(i))\n",
-    "        \n",
-    "    for i, (wall_distance, wall_angle) in enumerate(walls):\n",
-    "        normal = np.r_[\n",
-    "            np.cos(wall_angle / 180 * np.pi), \n",
-    "            np.sin(wall_angle / 180 * np.pi)\n",
-    "        ]\n",
-    "        arrow, line = plot_wall(wall_distance*1e-2, normal, ax, plane_index=i, label=f\"wall {i}\")\n",
-    "    add_decorations(fig, ax, n_poses=n_timesteps)\n",
-    "        \n",
-    "fig, ax = plt.subplots()\n",
-    "plot_groundtruth(ax, positions_cm, walls=WALLS_DICT[exp_name])\n",
-    "save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_gt.pdf\")"
+    "#fig, ax = plt.subplots()\n",
+    "#plot_groundtruth(ax, positions_cm, walls=WALLS_DICT[exp_name])\n",
+    "#save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_gt.pdf\")"
    ]
   },
   {
