Create plots with correct covariances, add timings

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -155,7 +155,7 @@
     "\n",
     "from utils.plotting_tools import FIGSIZE, save_fig\n",
     "\n",
-    "exp_name=\"2021_10_12_flying\"; motors=\"linear_buzzer_cont\"; \n",
+    "#exp_name=\"2021_10_12_flying\"; motors=\"linear_buzzer_cont\"; \n",
     "#appendix=\"_new3\" # best\n",
     "#appendix=\"_new6\" # too fast, otherwise good\n",
     "#appendix=\"_new10\" # okay-ish\n",
@@ -169,10 +169,14 @@
     "#appendix=\"_3\" # okay\n",
     "#appendix=\"_4\" # good\n",
     "#appendix=\"_5\"A # not good\n",
-    "appendix=\"_6\"\n",
+    "#appendix=\"_6\"\n",
+    "\n",
+    "exp_name=\"2022_01_27_demo\"; motors=\"live\"; \n",
+    "appendix = \"test4\"\n",
     "\n",
     "results_df = pd.read_pickle(f\"../datasets/{exp_name}/all_data.pkl\")\n",
-    "print(results_df.appendix)\n",
+    "print(results_df.appendix.unique())\n",
+    "print(results_df.motors.unique())\n",
     "row = results_df.loc[\n",
     "    (results_df.appendix == appendix) & (results_df.motors == motors), :\n",
     "].iloc[0]\n",
@@ -262,6 +266,8 @@
     "inf_machine = Inference()\n",
     "inf_machine.add_geometry([distances_cm[0], distances_cm[-1]], WALL_ANGLE_DEG)\n",
     "\n",
+    "runtimes_inference = []\n",
+    "\n",
     "for calib_method, mics, algorithm in itertools.product(calib_method_list, mics_list, algorithm_list):\n",
     "    if calib_method == \"on_the_fly\":\n",
     "        calib_values = calib_on_the_fly\n",
@@ -297,26 +303,31 @@
     "\n",
     "        t1 = time.time()\n",
     "        diff_moving = {}\n",
+    "        t1 = time.time()\n",
     "        for mic_idx in mics:\n",
     "            dist, prob_mic, diff = inf_machine.do_inference(algorithm, mic_idx)\n",
     "            distance_estimator.add_distribution(diff * 1e-2, prob_mic, mic_idx)\n",
     "            diff_moving[mic_idx] = (diff, prob_mic)\n",
+    "        runtimes_inference.append(time.time() - t1)\n",
     "\n",
     "        __, prob = distance_estimator.get_distance_distribution(verbose=False, angle_deg=WALL_ANGLE_DEG)\n",
     "        time_single += int(1000*(time.time() - t1))\n",
     "\n",
-    "        t1 = time.time()\n",
     "        moving_estimator.add_distributions(\n",
     "            diff_moving, position_cm=positions_cm[i], rot_deg=yaws_deg[i]\n",
     "        )\n",
+    "        t1 = time.time()\n",
     "        particle_estimator.add_distributions(\n",
     "            diff_moving, position_cm=positions_cm[i], rot_deg=yaws_deg[i]\n",
     "        )\n",
+    "        runtimes_inference[-1] += time.time() - t1\n",
     "        \n",
     "        __, prob_moving, __, prob_angle_moving = moving_estimator.get_distributions(simplify_angles=simplify_angles)\n",
     "        time_moving += int(1000*(time.time() - t1))\n",
     "        \n",
+    "        t1 = time.time()\n",
     "        __, prob_part, __, prob_angle_part = particle_estimator.get_distributions(simplify_angles=simplify_angles, method=particle_method)\n",
+    "        runtimes_inference[-1] += time.time() - t1\n",
     "        \n",
     "        dist_est_cm = distances_cm[np.argmax(prob_moving)]\n",
     "        __, prob_angle = distance_estimator.get_angle_distribution(\n",
@@ -600,10 +611,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# plot heatmaps and cdfs"
    ]
@@ -638,7 +647,7 @@
     "color[\"random\"] = \"k\"\n",
     "color[\"fixed\"] = \"k\"\n",
     "\n",
-    "for estimator in [\"particle\", \"moving\"]:\n",
+    "for estimator in [\"particle\"]:#, \"moving\"]:\n",
     "    for i_app, appendix in enumerate(appendices):\n",
     "        \n",
     "        # flow deck was drifting a lot for experiments downstairs (carpet)\n",
@@ -893,7 +902,7 @@
     "results_df = pd.read_pickle(f\"../datasets/{exp_name}/all_data.pkl\")\n",
     "print(\"available appendices:\", results_df.appendix.values)\n",
     "\n",
-    "#appendix = \"test4\"  # works well\n",
+    "appendix = \"test4\"  # works well\n",
     "#appendix = \"test3\" # works ok\n",
     "#appendix = \"test2\"  # doesn't detect\n",
     "#appendix = \"test1\" # crashes\n",
@@ -908,7 +917,7 @@
    "source": [
     "from utils.plotting_tools import FIGSIZE, save_fig, add_colorbar\n",
     "from crazyflie_demo.wall_detection import FLYING_HEIGHT_CM\n",
-    "from generate_classifier_results import WALLS_DICT\n",
+    "from generate_classifier_results import WALLS_DICT, get_groundtruth_distances\n",
     "\n",
     "row = results_df.loc[results_df.appendix == appendix,:].iloc[0]\n",
     "\n",
@@ -1042,7 +1051,7 @@
     "            np.cos(wall_angle / 180 * np.pi), \n",
     "            np.sin(wall_angle / 180 * np.pi)\n",
     "        ]\n",
-    "        arrow, line = plot_wall(wall_distance*1e-2, normal, ax, plane_index=i, label=f\"real $\\\\pi^{i}$\", ls=\":\", lw=3.0)\n",
+    "        arrow, line = plot_wall(wall_distance*1e-2, normal, ax, plane_index=i, label=f\"real $\\\\pi^{{({i})}}$\", ls=\":\", lw=3.0)\n",
     "    add_decorations(fig, ax, n_poses=n_poses)\n",
     "        "
    ]
@@ -1086,6 +1095,8 @@
     "fig, ax = plt.subplots()\n",
     "plot_groundtruth(ax, positions_cm, walls=WALLS_DICT[exp_name], n_poses=0)\n",
     "\n",
+    "runtimes_fg = []\n",
+    "\n",
     "for i in range(n_timesteps):\n",
     "    if i % 20 == 0:\n",
     "        print(f\"{i+1}/{n_timesteps}\")\n",
@@ -1119,6 +1130,7 @@
     "        \n",
     "    results_matrix_moving[:, i] = prob_moving_dist\n",
     "    \n",
+    "    t1 = time.time()\n",
     "    d, std = get_estimate(wall_detection.estimator.distances_cm, prob_moving_dist, method=estimation_method)\n",
     "    distance_estimates.append(d)\n",
     "    std_estimates.append(std)\n",
@@ -1135,6 +1147,7 @@
     "    \n",
     "    d_estimate = wall_backend.get_distance_estimate()\n",
     "    angle_deg = wall_backend.get_angle_estimate()\n",
+    "    runtimes_fg.append(time.time() - t1)\n",
     "    \n",
     "    fg_dist_estimates.append(d_estimate * 1e2 if d_estimate else None)\n",
     "    fg_angle_estimates.append(angle_deg)\n",
@@ -1155,10 +1168,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fig, ax = plt.subplots()\n",
-    "#plot_groundtruth(ax, positions_cm, walls=WALLS_DICT[exp_name])\n",
-    "#save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_gt.pdf\")"
+    "plt.figure()\n",
+    "plt.plot(np.array(runtimes_fg) * 1e3)\n",
+    "plt.axhline(np.mean(runtimes_fg) * 1e3)\n",
+    "plt.xlabel(\"time index [-]\")\n",
+    "plt.ylabel(\"time [ms]\")\n",
+    "plt.figure()\n",
+    "plt.plot(np.array(runtimes_inference) * 1e3)\n",
+    "plt.axhline(np.mean(runtimes_inference) * 1e3)\n",
+    "plt.xlabel(\"time index [-]\")\n",
+    "plt.ylabel(\"time [ms]\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
