Generate new plot formats

--- a/python/StepperAnalysis.ipynb
+++ b/python/StepperAnalysis.ipynb
@@ -273,7 +273,8 @@
     "}\n",
     "for (algorithm), df_dis in plot_df.groupby([\"algorithm\"]):\n",
     "    fig, ax = plt.subplots()\n",
-    "    fig.set_size_inches(4*figsize, figsize)\n",
+    "    fig.set_size_inches(2.7*figsize, 2.3*figsize)\n",
+    "    #fig.set_size_inches(4*figsize, figsize)\n",
     "    ax_time = ax.twinx()\n",
     "    particles_error = {}\n",
     "    particles_runtime = {}\n",
@@ -309,7 +310,7 @@
     "\n",
     "    #leg = ax.legend(loc='upper left', bbox_to_anchor=[1.2, 1.0])\n",
     "    #leg = ax.legend(loc='lower center',ncol=2,bbox_to_anchor=[0.5, 1.0])\n",
-    "    leg = ax.legend(loc='upper center',ncol=2)\n",
+    "    leg = ax.legend(loc='upper center',ncol=1)\n",
     "    ax.grid(True)\n",
     "    ax.set_xlabel(\"$N_{\\\\theta}$ \\n $N_d$ \\n $N_p$\")\n",
     "    ax.xaxis.set_label_coords(-0.02, -0.025)\n",
@@ -317,6 +318,7 @@
     "    ax_time.set_ylabel(\"runtime [s]\", color=\"C1\")\n",
     "    ax_time.yaxis.set_tick_params(colors=\"C1\")\n",
     "    ax.yaxis.set_tick_params(colors=\"C0\")\n",
+    "    ax.set_title(\"time vs. performance\")\n",
     "    #ax.set_title(f\"{algorithm}\")\n",
     "    save_fig(fig, f\"plots/experiments/{exp_name}_{algorithm.replace(' ', '_')}_time-error.pdf\")"
    ]
@@ -394,9 +396,16 @@
     "#chosen_dict = {}\n",
     "\n",
     "for discretization, df_ in plot_df.groupby(\"discretization\", sort=False):\n",
+    "    fig_d, ax_d = plt.subplots()\n",
+    "    fig_d.set_size_inches(1.7*figsize, 2*figsize)\n",
+    "    fig_a, ax_a = plt.subplots()\n",
+    "    fig_a.set_size_inches(1.7*figsize, 2*figsize)\n",
+    "    axs_da = [ax_d, ax_a]\n",
+    "    \n",
     "    fig, axs = plt.subplots(1, 2)\n",
     "    fig.set_size_inches(4*figsize, 2*figsize)\n",
     "    for i, (algorithm, df_dis) in enumerate(df_.groupby(\"algorithm\", sort=False)):\n",
+    "        ax = axs_da[i]\n",
     "        for method, df in df_dis.groupby(\"method\"):\n",
     "            color_name  = method.split(' ')[0]\n",
     "            if color_name in [\"fixed\", \"random\"]:\n",
@@ -411,17 +420,24 @@
     "                label = labels[ls_name]\n",
     "            else:\n",
     "                label = None\n",
-    "            axs[i].plot(df.distance, df.error, color=color[color_name], linestyle=ls[ls_name], label=label)\n",
-    "            \n",
-    "            axs[i].grid(True)\n",
-    "            axs[i].set_title(f\"{algorithm.replace('bayes ','')} estimation \")\n",
-    "            axs[i].set_xlabel(\"real distance [cm]\")\n",
-    "            axs[i].set_ylabel(f\"error [{units[algorithm]}]\", y=0.5, x=0.01)\n",
-    "            axs[i].yaxis.set_label_coords(-0.15, 0.5)\n",
+    "                \n",
+    "            for ax in [axs[i], ax]:\n",
+    "                ax.plot(df.distance, df.error, color=color[color_name], linestyle=ls[ls_name], label=label)\n",
+    "                ax.grid(True)\n",
+    "                ax.set_title(f\"{algorithm.replace('bayes ','')} estimation \")\n",
+    "                ax.set_xlabel(\"real distance [cm]\")\n",
+    "                ax.set_ylabel(f\"error [{units[algorithm]}]\", y=0.5, x=0.01)\n",
+    "                ax.yaxis.set_label_coords(-0.15, 0.5)\n",
+    "        #add_double_legend(ax, exclude=[\"fixed\", \"random\"])\n",
     "        \n",
     "    add_double_legend(axs[i], exclude=[\"fixed\", \"random\"])\n",
     "    fig.subplots_adjust(wspace=0.3)\n",
-    "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_errors.pdf\")"
+    "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_errors.pdf\")\n",
+    "    \n",
+    "    fig_d.subplots_adjust(wspace=0.3)\n",
+    "    save_fig(fig_d, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_errors_d.pdf\")\n",
+    "    fig_a.subplots_adjust(wspace=0.3)\n",
+    "    save_fig(fig_a, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_errors_a.pdf\")"
    ]
   },
   {
