Generate mic ablation study

--- a/python/StepperAnalysis.ipynb
+++ b/python/StepperAnalysis.ipynb
@@ -264,13 +264,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "\n",
     "from plot_helpers import color, ls, units, labels\n",
     "\n",
     "# current:\n",
     "#plot_df = pd.read_pickle(\"results/stepper_results_timing.pkl\")\n",
     "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1.pkl\")\n",
     "\n",
-    "plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform.pkl\")\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform.pkl\")\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform_new.pkl\")\n",
     "plot_df = plot_df.loc[plot_df.method.str.startswith(\"calibrated\")]\n",
     "\n",
     "# add extra columns for plots\n",
@@ -305,7 +309,7 @@
     "            ls_name = method.split(color_name)[1].strip()\n",
     "            \n",
     "            label = labels[ls_name]\n",
-    "            print(\"using linestyle\", ls[ls_name])\n",
+    "            #print(\"using linestyle\", ls[ls_name])\n",
     "\n",
     "            median = df.groupby(\"number angles\").median()\n",
     "            median.error += shifts[ls_name]\n",
@@ -346,7 +350,7 @@
    "outputs": [],
    "source": [
     "from plot_helpers import add_double_legend\n",
-    "plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform.pkl\")\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform_new.pkl\")\n",
     "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1.pkl\")\n",
     "\n",
     "print(\"figsize\", figsize)\n",
@@ -382,6 +386,71 @@
     "    add_double_legend(axs[i])\n",
     "    fig.subplots_adjust(wspace=0.3)\n",
     "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_cdfs.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plot_helpers import add_double_legend\n",
+    "\n",
+    "def convert_to_str(row):\n",
+    "    chosen_mic = row.chosen_mics\n",
+    "    chosen_mic_str = \"-\".join(map(str, chosen_mic))\n",
+    "    row.chosen_mics = chosen_mic_str\n",
+    "    return row\n",
+    "\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_coarse.pkl\") # different ones, coarse only.\n",
+    "#discretization = \"coarse\"\n",
+    "\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_all.pkl\")\n",
+    "#discretization = \"coarse\"\n",
+    "#discretization = \"medium\"\n",
+    "#discretization = \"fine\"\n",
+    "\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_final.pkl\")\n",
+    "discretization = \"fine\"\n",
+    "\n",
+    "X_MAX = {\n",
+    "    \"bayes angle\": plot_df[plot_df.algorithm==\"bayes angle\"].error.max(),\n",
+    "    \"bayes distance\": 30 #plot_df[plot_df.algorithm==\"bayes distance\"].error.max()\n",
+    "}\n",
+    "\n",
+    "chosen_dict = {\n",
+    "    \"discretization\":discretization,\n",
+    "}\n",
+    "try_df = filter_by_dict(plot_df, chosen_dict)\n",
+    "try_df = try_df.loc[~try_df.method.isin([\"fixed\", \"random\"])]\n",
+    "if len(try_df) == 0:\n",
+    "    print(\"Warning: deleted all rows.\", discretization, plot_df.discretization.unique())\n",
+    "else:\n",
+    "    plot_df = try_df\n",
+    "plot_df = plot_df.apply(convert_to_str, axis=1)\n",
+    "\n",
+    "colors = plt.get_cmap(\"viridis\", lut=len(plot_df.chosen_mics.unique()))\n",
+    "\n",
+    "fig, axs = plt.subplots(1, 2)\n",
+    "fig.set_size_inches(4*figsize, 2*figsize)\n",
+    "for i, (algorithm, df_dis) in enumerate(plot_df.groupby(\"algorithm\", sort=False)):\n",
+    "    for j, (chosen_mics, df) in enumerate(df_dis.groupby(\"chosen_mics\", sort=False)):\n",
+    "        #just a sanity check that each distance only appears once\n",
+    "        if not len(df.distance) == len(df.distance.unique()):\n",
+    "            print(df)\n",
+    "            break\n",
+    "        cdf = sorted(np.abs(df.error))\n",
+    "        axs[i].plot(cdf, np.linspace(0, 1, len(cdf)), label=chosen_mics, color=colors(j))\n",
+    "        axs[i].grid(True)\n",
+    "    axs[i].set_xlim(0, X_MAX[algorithm])\n",
+    "    axs[i].set_title(f\"{algorithm.replace('bayes', '')} estimation\")\n",
+    "    axs[i].set_xlabel(f\"absolute error [{units[algorithm]}]\")\n",
+    "    axs[i].set_ylabel(\"cdf [-]\")\n",
+    "    axs[i].yaxis.set_label_coords(-0.15, 0.5)\n",
+    "axs[i].legend(loc=\"upper left\", bbox_to_anchor=[1.0,1.0], title=\"used mics\", ncol=2)\n",
+    "#add_double_legend(axs[i])\n",
+    "fig.subplots_adjust(wspace=0.3)\n",
+    "save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_mics_cdfs.pdf\")"
    ]
   },
   {
@@ -457,203 +526,6 @@
     "    save_fig(fig_d, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_errors_d.pdf\")\n",
     "    fig_a.subplots_adjust(wspace=0.3)\n",
     "    save_fig(fig_a, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_errors_a.pdf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "if PLATFORM == \"epuck\":\n",
-    "    raise NotImplementedError(\"Nothing to be done for epuck\")\n",
-    "\n",
-    "# use the different online schemes and compare\n",
-    "df_mat = pd.read_pickle(\"results/stepper_results_matrices.pkl\")\n",
-    "df_mat = df_mat[(df_mat[\"relative std\"] == 1.0) \n",
-    "              & (df_mat[\"mask bad\"]==\"fixed\")]\n",
-    "\n",
-    "for (calibration, n_window), df_calib in df_mat.groupby([\"calibration name\", \"n window\"]):\n",
-    "    fig, axs = plt.subplots(1, 2)\n",
-    "    fig.set_size_inches(10, 5)\n",
-    "    for i, row in df_calib.iterrows():\n",
-    "        \n",
-    "        label = f'{round(row[\"calibration param\"], 1)}'\n",
-    "        matrix = row[\"matrix distances\"][0]\n",
-    "        distances_cm = row[\"distances_cm\"]\n",
-    "        \n",
-    "        real_distances = np.arange(matrix.shape[1]) + 7\n",
-    "        distance_estimates = distances_cm[np.argmax(matrix, axis=0)]\n",
-    "        axs[0].plot(np.arange(matrix.shape[1]), real_distances - distance_estimates, label=label)\n",
-    "        \n",
-    "        cdf = np.sort(np.abs(real_distances - distance_estimates))\n",
-    "        axs[1].plot(cdf, np.linspace(0, 1, len(cdf)), label=label)\n",
-    "    axs[0].grid(True)\n",
-    "    axs[1].grid(True)\n",
-    "    axs[1].set_xlim(0, 50)\n",
-    "    axs[0].set_ylim(-50, 50)\n",
-    "    axs[1].legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
-    "    #plt.plot(np.arange(matrix.shape[1]), real_distances, color='k')\n",
-    "    plt.ylabel(\"error [cm]\")\n",
-    "    #plt.suptitle(f\"$N_w$={n_window}, calibration {calibration}\", y=0.95)\n",
-    "    plt.suptitle(f\"calibration: {calibration}\", y=0.95)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## TODO(FD): fix below if necessary. \n",
-    "\n",
-    "from utils.inference import eps_normalize\n",
-    "from utils.simulation import get_freq_slice_theory\n",
-    "from utils.plotting_tools import all_linestyles\n",
-    "\n",
-    "mic_idx = 1\n",
-    "eps = 1e-5\n",
-    "\n",
-    "plot_combis = [\n",
-    "    #{\"distance\": 15, \"algorithm\": \"cost\"},\n",
-    "    {\"distance\": 15, \"algorithm\": \"bayes\"},\n",
-    "    #{\"distance\": 17, \"algorithm\": \"bayes\"},\n",
-    "    #{\"distance\": 28, \"algorithm\": \"bayes\"},\n",
-    "]\n",
-    "print(\"using uniform prior:\", use_uniform_prior)\n",
-    "\n",
-    "for plot_combi in plot_combis:\n",
-    "    distance = plot_combi.get(\"distance\")\n",
-    "    algorithm = plot_combi.get(\"algorithm\")\n",
-    "\n",
-    "    shape = (1, n_mics)\n",
-    "    # plot the slices\n",
-    "    fig_slice, axs_slice = plt.subplots(*shape, sharex=True, sharey=True)\n",
-    "    fig_slice.set_size_inches(3 * shape[1], 2 * shape[0])\n",
-    "    # plot the results \n",
-    "    fig_algo, axs_algo = plt.subplots(*shape, sharex=True, sharey=True)\n",
-    "    fig_algo.set_size_inches(3 * shape[1], 2 * shape[0])\n",
-    "\n",
-    "    distance_estimators = {k: DistanceEstimator() for k in method_dict.keys()}\n",
-    "    for i_method, (method, normalize_method) in enumerate(method_dict.items()):\n",
-    "        if method == \"theoretical\":\n",
-    "            slice_exp = get_freq_slice_theory(df_freq,\n",
-    "                                              distance,\n",
-    "                                              azimuth_deg=azimuth_deg, \n",
-    "                                              chosen_mics=chosen_mics)\n",
-    "            slice_exp = slice_exp.T # now it's 4x32\n",
-    "            freqs = df_freq\n",
-    "        else:\n",
-    "            slice_exp, freqs, stds = data_collector.get_frequency_slice_fixed(\n",
-    "                df_freq,\n",
-    "                distance,\n",
-    "                mics=chosen_mics)\n",
-    "            slice_exp = np.sqrt(slice_exp)\n",
-    "            \n",
-    "            \n",
-    "        inf_machine.add_data(slice_exp, df_freq, mics=chosen_mics)\n",
-    "        inf_machine.filter_out_freqs()\n",
-    "        inf_machine.add_calibration_function(normalize_method)\n",
-    "\n",
-    "        for i_mic, mic_idx in enumerate(chosen_mics):\n",
-    "            distances_bayes, proba_bayes_norm, diff_bayes = inf_machine.do_inference(\n",
-    "                algorithm=\"bayes\", \n",
-    "                mic_idx=i_mic,\n",
-    "                #normalize=False\n",
-    "            )\n",
-    "            \n",
-    "            inf_machine.plot(i_mic=i_mic, ax=axs_slice[i_mic], label=method, standardize=True,\n",
-    "                             ls=all_linestyles[i_method])#marker='o')\n",
-    "\n",
-    "            distance_estimators[method].add_distribution(\n",
-    "                diff_bayes * 1e-2, proba_bayes_norm, mic_idx\n",
-    "            )\n",
-    "            d = get_estimate(distances_bayes, proba_bayes_norm)\n",
-    "\n",
-    "            axs_algo[i_mic].semilogy(\n",
-    "                distances_bayes,\n",
-    "                eps_normalize(proba_bayes_norm, eps=eps),\n",
-    "                color=f\"C{i_method}\",\n",
-    "                ls=all_linestyles[i_method],\n",
-    "                label=method,\n",
-    "            )\n",
-    "            axs_algo[i_mic].axvline(x=d, color=f\"C{i_method}\", ls=\":\") \n",
-    "            axs_algo[i_mic].set_title(f\"mic{mic_idx}\")\n",
-    "            axs_slice[i_mic].set_title(f\"mic{mic_idx}\")\n",
-    "        \n",
-    "    label_real = f\"real: {distance:.0f}cm\"\n",
-    "    #axs_slice[-1].legend(title=label_real, bbox_to_anchor=[1.0, 1.0], loc='upper left')\n",
-    "    #axs_algo[-1].legend(title=label_real, bbox_to_anchor=[1.0, 1.0], loc='upper left')\n",
-    "    axs_slice[0].set_ylabel('amplitude') \n",
-    "    axs_algo[0].set_ylabel('probability') \n",
-    "    [ax.set_xlabel('frequency [Hz]') for ax in axs_slice]\n",
-    "    [ax.set_xlabel('distance [cm]') for ax in axs_algo]\n",
-    "\n",
-    "    fname_here = f\"{plot_dir}/{fname}_{distance}cm_raw_slices.png\"\n",
-    "    save_fig(fig_slice, fname_here)\n",
-    "    fname_here = f\"{plot_dir}/{fname}_{distance}cm_raw_results.png\"\n",
-    "    save_fig(fig_algo, fname_here)\n",
-    "\n",
-    "    fig_combi, axs_combi = plt.subplots(1, 2)\n",
-    "    fig_combi.set_size_inches(6, 3)\n",
-    "    \n",
-    "    print(\"getting distance distribution...\")\n",
-    "    ax_combi = axs_combi[0]\n",
-    "    for i_method, (method, distance_estimator) in enumerate(\n",
-    "        distance_estimators.items()\n",
-    "    ):\n",
-    "        azimuth_deg_here = None if use_uniform_prior else azimuth_deg_here\n",
-    "        distances_m, proba = distance_estimator.get_distance_distribution(\n",
-    "            azimuth_deg=azimuth_deg_here, distances_m=distances_grid_m, verbose=False,\n",
-    "            method=\"sum\"\n",
-    "        )\n",
-    "        print(distances_m, proba)\n",
-    "        ax_combi.plot(\n",
-    "            distances_m*1e2,\n",
-    "            eps_normalize(proba, eps=eps),\n",
-    "            color=f\"C{i_method}\",\n",
-    "            ls=all_linestyles[i_method],\n",
-    "            label=method,\n",
-    "        )\n",
-    "    ax_combi.axvline(x=distance, color=\"black\", ls=\":\")\n",
-    "    ax_combi.set_xlabel(\"distance [cm]\")\n",
-    "    ax_combi.set_ylabel(\"probability\")\n",
-    "    #ax_combi.set_title(\"total probability\")\n",
-    "    ax_combi.set_yscale(\"log\")\n",
-    "\n",
-    "    print(\"getting angle distribution...\")\n",
-    "    ax_combi = axs_combi[1]\n",
-    "    for i_method, (method, distance_estimator) in enumerate(\n",
-    "        distance_estimators.items()\n",
-    "    ):\n",
-    "\n",
-    "        # doesn't work with uniform prior!!\n",
-    "        distance_m_here = d * 1e-2\n",
-    "        angles, proba = distance_estimator.get_angle_distribution(\n",
-    "            distance_estimate_m=distance_m_here,\n",
-    "            azimuths_deg=np.arange(360),\n",
-    "            method=\"sum\",\n",
-    "        )\n",
-    "        ax_combi.plot(\n",
-    "            angles,\n",
-    "            eps_normalize(proba, eps=eps),\n",
-    "            color=f\"C{i_method}\",\n",
-    "            ls=all_linestyles[i_method],\n",
-    "            label=method,\n",
-    "        )\n",
-    "    ax_combi.axvline(\n",
-    "        x=azimuth_deg, color=\"black\", ls=\":\", label=f\"real: {distance:.0f}cm, {azimuth_deg:.0f}$^\\\\circ$\"\n",
-    "    )\n",
-    "    ax_combi.legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
-    "    ax_combi.set_xlabel(\"angle [$^\\\\circ$]\")\n",
-    "    #ax_combi.set_title(\"total probability\")\n",
-    "    ax_combi.set_yscale(\"log\")\n",
-    "    plt.subplots_adjust(wspace=0.25)\n",
-    "\n",
-    "    fname_here = f\"{plot_dir}/{fname}_{distance}cm_raw_total.png\"\n",
-    "    save_fig(fig_combi, fname_here)"
    ]
   },
   {
