Add beamforming study

--- a/python/StepperAnalysis.ipynb
+++ b/python/StepperAnalysis.ipynb
@@ -395,6 +395,7 @@
    "outputs": [],
    "source": [
     "from plot_helpers import add_double_legend\n",
+    "from utils.pandas_utils import filter_by_dict\n",
     "\n",
     "def convert_to_str(row):\n",
     "    chosen_mic = row.chosen_mics\n",
