--- a/python/WallStudy.ipynb
+++ b/python/WallStudy.ipynb
@@ -204,14 +204,14 @@
     "            else:\n",
     "                color='w'\n",
     "\n",
-    "            if matrix.dtype == np.float:\n",
+    "            if matrix.dtype == float:\n",
     "                ax.text(ii+df_y, jj+df_x, f\"{matrix[i, j]:.1f}\", ha='center', va='center', size=8, color=color)\n",
     "            else:\n",
     "                ax.text(ii+df_y, jj+df_x, f\"{matrix[i, j]:.0f}\", ha='center', va='center', size=8, color=color)\n",
     "        \n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(figsize, figsize)\n",
-    "matrix = matrix.astype(np.int)\n",
+    "matrix = matrix.astype(int)\n",
     "im = pcolorfast_custom(ax, freqs, freqs, matrix)\n",
     "add_colorbar(fig, ax, im, title='distance [cm]')\n",
     "#add_labels(ax, matrix)\n",
@@ -492,48 +492,6 @@
     "plt.xlabel(\"distance [cm]\")\n",
     "plt.ylabel(\"frequency [Hz]\")\n",
     "#matrix_slices(df_matrix, freq, dist)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## play around with beamforming before creating interference matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils.geometry import Context\n",
-    "from utils.simulation import generate_room, get_buffers\n",
-    "from audio_stack.beam_former import BeamFormer\n",
-    "\n",
-    "context = Context.get_platform_setup()\n",
-    "beamformer = BeamFormer(mic_positions=context.mics)\n",
-    "\n",
-    "df_matrix_beamformed = np.empty((len(frequencies), len(dist)))\n",
-    "for j, distance_cm in enumerate(dist):\n",
-    "    room = generate_room(distance_cm=distance_cm)\n",
-    "    signals_f = get_buffers(room, signal, n_times=2) # 1 x 4 x n_freqs\n",
-    "    signals_f = signals_f[0, :, :].T\n",
-    "    \n",
-    "    # combine mics signals with beamforming. \n",
-    "    #coeffs = beamformer.beamform_das(np.pi/2, frequencies_hz=frequencies)\n",
-    "    R = beamformer.get_correlation(signals_f)\n",
-    "    coeffs = beamformer.beamform_mvdr(R, np.pi/2, frequencies_hz=frequencies)\n",
-    "    slice_total = np.sum(np.multiply(coeffs, signals_f), axis=1)\n",
-    "    df_matrix_beamformed[:, j] = np.abs(slice_total) ** 2\n",
-    "    \n",
-    "fig, ax = plt.subplots()\n",
-    "ax.pcolorfast(dist, freq, df_matrix_beamformed[freq_start:freq_end, :])\n",
-    "gains = np.mean(df_matrix_beamformed[freq_start:freq_end, 5:], axis=1)\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.pcolorfast(dist, freq, df_matrix_beamformed[freq_start:freq_end, :]/gains[:, None])\n",
-    "plt.figure()\n",
-    "plt.plot(freq, gains)"
    ]
   },
   {
