Small edits to data parsing

--- a/python/Beamforming.ipynb
+++ b/python/Beamforming.ipynb
@@ -466,7 +466,8 @@
     "from generate_flying_results import combine_stepper_df\n",
     "stepper_df = pd.read_pickle(\"../datasets/2021_07_08_stepper_fast/all_data.pkl\")\n",
     "data_df = combine_stepper_df(stepper_df, motors=\"all45000\", bin_selection=5, average=False)\n",
-    "print(data_df)"
+    "print(data_df)\n",
+    "print(data_df.stft.shape)"
    ]
   },
   {
@@ -474,7 +475,7 @@
    "execution_count": null,
    "id": "38d5c1d5",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -495,7 +496,6 @@
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
     "chosen = np.arange(n_positions)[:30]\n",
-    "print(chosen)\n",
     "cmap = plt.get_cmap('viridis', lut=len(chosen))\n",
     "distances_cm = -data_df.positions[chosen, 1]\n",
     "\n",
@@ -527,32 +527,6 @@
     "plt.plot(distances_cm, angle_estimates)\n",
     "plt.xlabel(\"distance [cm]\")\n",
     "plt.ylabel(\"angle estimate [deg]\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "429ded9b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.stats import norm\n",
-    "\n",
-    "states = np.arange(10)\n",
-    "\n",
-    "posterior = norm.pdf(states, loc=1, scale=1.0)\n",
-    "plt.figure()\n",
-    "plt.plot(posterior)\n",
-    "sigma_d = 2\n",
-    "norm = np.exp(-(states[:, None] - states[None, :])**2 / sigma_d)\n",
-    "print(norm.shape)\n",
-    "plt.figure()\n",
-    "plt.matshow(norm)\n",
-    "\n",
-    "prior = np.sum(norm * posterior[:, None], axis=0)\n",
-    "prior /= np.sum(prior)\n",
-    "plt.figure()\n",
-    "plt.plot(prior)"
    ]
   },
   {
